[new feature] logger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # project
-spring.application.name=test
+spring.application.name=template
 
 # port 
 server.port=8091
@@ -7,6 +7,9 @@ server.port=8091
 # swagger
 springdoc.api-docs.path=/openapi.json
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# log
+logging.file.name=project.log
 
 # nginx
 server.forward-headers-strategy=native
