[new feature] post-upload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ server.port=8091
 # swagger
 springdoc.api-docs.path=/openapi.json
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operations-sorter=method
 
 # log
 logging.file.name=project.log
